--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "create-component": "./create_component.sh"
   },
   "dependencies": {
+    "i18next": "^23.7.6",
+    "next": "14.0.3",
+    "next-intl": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-i18next": "^13.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "typescript": "^5"
   }
 }
