--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-intl": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^13.5.0"
+    "react-i18next": "^13.5.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
