--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-intl": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropdown-select": "^4.11.1",
     "react-i18next": "^13.5.0",
     "swiper": "^11.0.5"
   },
